# Mobile-Workstation-MWS

./: README.md
Attempt_Pmm/: Attempt_Pmm.ino
BluetoothCommunicationsModule/MwsCompanionApp/MwsCompanionApp/: App.xaml  App.xaml.cs  MauiProgram.cs  MwsCompanionApp.csproj
BluetoothCommunicationsModule/MwsCompanionApp/MwsCompanionApp/Infrastructure/: ExistsConverter.cs  NotConverter.cs
BluetoothCommunicationsModule/MwsCompanionApp/MwsCompanionApp/Interfaces/: IConnectionManagementService.cs  IMwsFactory.cs
BluetoothCommunicationsModule/MwsCompanionApp/MwsCompanionApp/Objects/: Mws.cs
BluetoothCommunicationsModule/MwsCompanionApp/MwsCompanionApp/Services/: ConnectionManagementService.cs  EventService.cs  PermissionsService.cs  PlatformRegistration.cs  ServiceRegistration.cs
BluetoothCommunicationsModule/MwsCompanionApp/MwsCompanionApp/ViewModels/: ViewModelRegistration.cs
BluetoothCommunicationsModule/MwsCompanionApp/MwsCompanionApp/Views/: AppShell.xaml.cs  ConnectPage.xaml.cs  ConnectionView.xaml  ConnectionView.xaml.cs  NoConnectionView.xaml  ScanningView.xaml  SettingsPage.xaml  SettingsPage.xaml.cs
BluetoothCommunicationsModule/MwsGatt/: MwsGatt.cpp  makefile
BluetoothCommunicationsModule/gobbledegook/: config.status
BluetoothCommunicationsModule/gobbledegook/src/: Globals.h  Init.cpp  Server.cpp  standalone.cpp
BluetoothCommunicationsModule/gobbledegook/src/.deps/: libggk_a-GattCharacteristic.Po  libggk_a-GattInterface.Po  libggk_a-GattProperty.Po  libggk_a-HciAdapter.Po  libggk_a-HciSocket.Po  libggk_a-Logger.Po  libggk_a-Utils.Po
Bluetooth_Communications_Module/MwsCompanionApp/: MwsCompanionApp.sln
Bluetooth_Communications_Module/MwsCompanionApp/MwsCompanionApp/Interfaces/: IScanningService.cs
Bluetooth_Communications_Module/MwsCompanionApp/MwsCompanionApp/Objects/: Mws.cs
Bluetooth_Communications_Module/MwsGatt/: MwsGatt.cpp  makefile
Bluetooth_Communications_Module/gobbledegook/: Makefile
Bluetooth_Communications_Module/gobbledegook/include/: Gobbledegook.h
Bluetooth_Communications_Module/gobbledegook/src/: Mgmt.cpp  Mgmt.h
Bluetooth_Pi_Module/: Server.cpp  ServerUtils.cpp  ServerUtils.h
Bluetooth_Pi_Module/gobbledegook/src/: Gobbledegook.cpp  HciAdapter.cpp  Makefile  Server.cpp
Bluetooth_Pi_Module/gobbledegook/src/.deps/: libggk_a-Gobbledegook.Po  (+4 more)
Bluetooth_Pi_Module/src/.deps/: libggk_a-DBusMethod.Po
DistanceFindingModule/BleScanPrototype/BLE_scan/: BLE_scan.ino
DistanceFindingModule/BleScanPrototype/BLE_scan65/: BLE_scan65.ino
DistanceFindingModule/BleScanPrototype/BLE_scan73/: BLE_scan73.ino
DistanceFindingModule/BleScanPrototype/BLE_scan79/: BLE_scan79.ino
DistanceFindingModule/BleScanPrototype/BLE_scan_general/: BLE_scan_general.ino
DistanceFindingModule/BleScanPrototype/ESPBluetooth/: ESPBluetooth.ino
DistanceFindingModule/ESPBluetooth/: ESPBluetooth.ino
DistanceFindingModule/Esp32Node/: Esp.h  EspNode.cpp  Mapping.h  commands.h  makefile
DistanceFindingModule/MauiTest1/: MauiTest1.sln
DistanceFindingModule/MauiTest1/MauiTest1/: App.xaml  App.xaml.cs  MauiProgram.cs  MauiTest1.csproj
DistanceFindingModule/MwsCompanionApp/MwsCompanionApp/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  MwsCompanionApp.csproj
DistanceFindingModule/MwsConfig/: ESPFour.txt  ESPOne.txt  ESPThree.txt  ESPTwo.txt
DistanceFindingModule/WindowsReadRssi/: App1.sln
DistanceFindingModule/WindowsReadRssi/App1/: App1.csproj  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
LocalizationModule/mpu9250_ros2_driver/: CMakeLists.txt  package.xml
LocalizationModule/mpu9250_ros2_driver/src/: imu_node.cpp  imu_node.h  rpi_driver.cpp  rpi_driver.h  test  test.cpp  test2  test2.cpp
LocalizationModule/mpu9250_ros2_driver/src/launch/: mpu9250_ros2_driver_launch.py
MovementModule/Motor-system-code/: Motor-system-code.ino
MovementModule/diffdrive_arduino/src/: CMakeLists.txt  package.xml
NavigationModule/BehaviorTrees/: navigate_to_pose_w_replanning_and_recovery.xml
NavigationModule/MwsNavigation/: MwsNavigation.cpp  makefile
NavigationModule/MwsNavigationController/: MwsNavigationController.cpp  makefile
NavigationModule/Ros_Drivers/: ESP.h  Mapping.cpp  Mapping.h  ROS_NODE_SET_UP.cpp  commands.cpp
NavigationModule/Ros_Drivers/ESP_Locations/: ESPFour.txt  ESPThree.txt  ESPTwo.txt  Info.txt
NavigationModule/Ultra_Sonic_Sensor_Final/: Ultra_Sonic_Sensor_Final.ino
NavigationModule/mws_behavior_tree_plugins/: CMakeLists.txt  package.xml  tree_nodes.xml
NavigationModule/mws_behavior_tree_plugins/src/: RangeUpdater.cpp  TruncatePathCustom.cpp
NavigationModule/mws_nav_plugins/: CMakeLists.txt  package.xml  plugins.xml
NavigationModule/mws_nav_plugins/include/mws_robot/: fake_goal_checker.hpp  fake_progress_checker.hpp
NavigationModule/mws_nav_plugins/src/: fake_goal_checker.cpp  fake_progress_checker.cpp
NavigationModule/mws_robot/description/: gazebo_control.xacro  mws_robot.ros2_control.xacro
NavigationModule/mws_robot/launch/: localization_launch.py  navigation_launch.py  slam_launch.py
NavigationModule/mws_robot/params/: ekf.yaml  nav2_params.yaml  slam.yaml
NavigationModule/nav2_startup/: package.xml
NavigationModule/nav2_startup/launch/: bringup_launch.py  tb3_simulation_launch.py
NavigationModule/rplidar_ros/launch/: rplidar_a1_launch.py
NavigationModule/rplidar_ros/src/: rplidar_node.cpp
RobotBringupModule/mws_robot/: CMakeLists.txt  package.xml
RobotBringupModule/mws_robot/description/: gazebo_control.xacro  imu.xacro  lidar.xacro  mws_robot.ros2_control.xacro  mws_robot.urdf.xacro  mws_robot_core.xacro
RobotBringupModule/mws_robot/launch/: localization_launch.py  mws_launch.py  mws_simulator.launch.py  rsp_launch.py
RobotBringupModule/mws_robot/params/: diffbot_controllers.yaml  ekf.yaml  nav2_params.yaml
Startup/: startup.sh
Startup/Programs/: Esp32Node  MwsNavigationController
Startup/Scripts/: control.sh  lidar.sh  localization.sh  navigation.sh  rsp.sh  slam.sh  transform_publisher.sh  transform_publisher_imu.sh
(+71 files in other folders)
