<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mws_nav_plugins</name>
  <version>0.0.0</version>
  <description>Package used to hold plugins for Nav2.</description>

  <maintainer email="tdcarson2000@gmail.com">Tyler Carson</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_core</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/plugins.xml" />
  </export>
</package>
